# TwitterBot-Framework

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml  ruff.toml
bot/: __init__.py  ab_testing.py  account_health.py  account_security.py  ad_manager.py  analytics_pipeline.py  audience.py  audience_insights.py  audience_lookalike.py  audience_segment.py  auto_outreach.py  benchmarker.py  bookmark_manager.py  campaign.py  cli.py  competitor.py  competitor_benchmark.py  compliance.py  content_calendar.py  content_generator.py  content_moderation.py  content_optimizer.py  content_recycler.py  crisis_manager.py  crosspost_engine.py  database.py  dm_funnel.py  dm_manager.py  engagement_rules.py  export.py  follower_analytics.py  growth_engine.py  hashtag_engine.py  influencer_finder.py  link_intelligence.py  lists_manager.py  media_manager.py  monetization.py  multi_account.py  plugin_system.py  (+25 more)
tests/: conftest.py  test_ab_testing.py  test_account_security.py  test_ad_manager.py  test_analytics.py  test_analytics_pipeline.py  test_audience.py  test_audience_insights.py  test_audience_lookalike.py  test_audience_segment.py  test_auto_outreach.py  test_benchmarker.py  test_campaign.py  test_cli.py  test_competitor.py  test_competitor_benchmark.py  test_compliance.py  test_content_calendar.py  test_content_generator.py  test_content_moderation.py  test_content_optimizer.py  test_content_recycler.py  test_crisis_manager.py  test_crosspost_engine.py  test_database.py  test_dm_funnel.py  test_dm_manager.py  test_engagement.py  test_engagement_rules.py  test_export.py  test_growth_engine.py  (+32 more)
(+9 files in other folders)
