[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterbot-framework"
version = "3.0.0"
description = "Twitter/X data analysis & automation toolkit via Telegram Bot — strategy engine, analytics, content generator, scheduler, A/B testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "platoba"}]
keywords = ["twitter", "x", "bot", "telegram", "automation", "analytics", "scheduler", "engagement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
oauth = ["requests-oauthlib>=1.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/platoba/TwitterBot-Framework"
Repository = "https://github.com/platoba/TwitterBot-Framework"
Issues = "https://github.com/platoba/TwitterBot-Framework/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
